@@ -1,3 +1,7 @@
+2011-12-12 Markus Kappe  <markus.kappe@dix.at>
+	* changed error message "nouser"
+	* bugfix with disabling authentication methods. renamed TS constant "method" to "disable" (with inverse logic)
+
 2011-12-07 Markus Kappe  <markus.kappe@dix.at>
 	* worked on the code, changed TS configuration completly! When you try to upgrade, you better delete your TS and start over
 	* added OAuth with twitter as an working example	
